# src/main/java/org/kasbench/blotter/BlockAllocationRequestDTO.java
@@ -2,13 +2,15 @@ package org.kasbench.blotter;
 
 import java.math.BigDecimal;
 
-public class TradeRequestDTO {
+public class BlockAllocationRequestDTO {
+    private Integer orderId;
     private Integer blockId;
     private BigDecimal quantity;
-    private Integer tradeTypeId;
     private BigDecimal filledQuantity;
     private Integer version;
-    private Integer destinationId;
+
+    public Integer getOrderId() { return orderId; }
+    public void setOrderId(Integer orderId) { this.orderId = orderId; }
 
     public Integer getBlockId() { return blockId; }
     public void setBlockId(Integer blockId) { this.blockId = blockId; }
@@ -16,15 +18,9 @@ public class TradeRequestDTO {
     public BigDecimal getQuantity() { return quantity; }
     public void setQuantity(BigDecimal quantity) { this.quantity = quantity; }
 
-    public Integer getTradeTypeId() { return tradeTypeId; }
-    public void setTradeTypeId(Integer tradeTypeId) { this.tradeTypeId = tradeTypeId; }
-
     public BigDecimal getFilledQuantity() { return filledQuantity; }
     public void setFilledQuantity(BigDecimal filledQuantity) { this.filledQuantity = filledQuantity; }
 
     public Integer getVersion() { return version; }
     public void setVersion(Integer version) { this.version = version; }
-
-    public Integer getDestinationId() { return destinationId; }
-    public void setDestinationId(Integer destinationId) { this.destinationId = destinationId; }
 } 
